JETcompiler/Tests/bad/bad007.myout
Name "x" is already taken in this scope., line 3
